# INSA-OpenMP-TD1

./: .gitignore  CMakeLists.txt  main.cpp  results.xlsx
